--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ MONOPOL LTDA UTILIZA TODA LA TECNOLOGÍA DISPONIBLE PARA HACER QUE LOS COLORES Q
             <table height="200" width="965">
                 <tr bgcolor=#CDCDCD valign=top>
                     <td width="321" align="center"><br><h2>CONTACTANOS</h2> <br> TELF: 2983864 <br> CEL:65135196</td>
-                    <td width="321" align="center"><br> <H2>ESTAMOS HUBICADOS</H2> <br> LA PAZ-VIACHA <br> TILATA/Av.Las Palmeras<br> N°2000 </td>
+                    <td width="321" align="center"><br> <H2>ESTAMOS UBICADOS</H2> <br> LA PAZ-VIACHA <br> TILATA/Av.Las Palmeras<br> N°2000 </td>
                     <td align="center"><br><h2>SECCION</h2><br>Ventas </td>
                 </tr>
             </table>
